fix images on mobile responsive

--- a/projects/project-two/advanced_coffee_shop/css/mobile-styles.css
+++ b/projects/project-two/advanced_coffee_shop/css/mobile-styles.css
@@ -20,7 +20,7 @@
     .product-pic1 {
         width: 240px;
         height: 250px;
-        background: url('../imgs/Product-1\ 1.png'), lightgray 50% / cover no-repeat;
+        background: url('../imgs/Product-1.png'), lightgray 50% / cover no-repeat;
     }
     .product-pic2 {
         width: 235px;
@@ -30,32 +30,32 @@
     .product-pic3 {
         width: 235px;
         height: 250px;
-        background: url('../imgs/Product-3\ 1.png'), lightgray 50% / cover no-repeat;
+        background: url('../imgs/Product-3.png'), lightgray 50% / cover no-repeat;
     }
     .product-pic4 {
         width: 235px;
         height: 250px;
-        background: url('../imgs/Product-4\ 1.png'), lightgray 50% / cover no-repeat;
+        background: url('../imgs/Product-4.png'), lightgray 50% / cover no-repeat;
     }
     .product-pic5 {
         width: 235px;
         height: 250px;
-        background: url('../imgs/Product-5\ 1.png'), lightgray 50% / cover no-repeat;
+        background: url('../imgs/Product-5.png'), lightgray 50% / cover no-repeat;
     }
     .product-pic6 {
         width: 235px;
         height: 250px;
-        background: url('../imgs/Product-6\ 1.png'), lightgray 50% / cover no-repeat;
+        background: url('../imgs/Product-6.png'), lightgray 50% / cover no-repeat;
     }
     .product-pic7 {
         width: 235px;
         height: 250px;
-        background: url('../imgs/Product-7\ 1.png'), lightgray 50% / cover no-repeat;
+        background: url('../imgs/Product-7.png'), lightgray 50% / cover no-repeat;
     }
     .product-pic8 {
         width: 235px;
         height: 250px;
-        background: url('../imgs/Product-8\ 1.png'), lightgray 50% / cover no-repeat;
+        background: url('../imgs/Product-8.png'), lightgray 50% / cover no-repeat;
     }
     .blog-pic {
         background: url('../imgs/blog-1.jpg'), lightgray 50% / cover no-repeat;
